feat(roster_service): Add comments to roster generation process